<resources>
    <string name="app_name">겟썸푸트</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_login">로그인</string>
    <string name="action_signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="success_login">로그인 성공</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">안녕하세요! </string>
    <string name="invalid_username">유효한 형식이 아닙니다</string>
    <string name="invalid_password">5자리 이상 입력해주세요</string>
    <string name="login_failed">사용자를 찾을 수 없습니다</string>
    <string name="title_activity_menubar">Menubar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_review">리뷰</string>
    <string name="menu_event">행사위치</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="prompt_name">이름/상호명</string>
    <string name="prompt_password_check">PASSWORD 확인</string>
    <string name="action_cancel">취소</string>
    <string name="seller_check">판매자인가요?</string>
    <string name="app_desc">편리하게 찾아보자,</string>
    <string name="label_order_list">주문목록</string>
    <string name="label_likes_list">즐겨찾기</string>
    <string name="open">영업시작</string>
    <string name="close">영업종료</string>
    <string name="label_seller_info">사업자 정보 변경</string>
    <string name="label_seller_name">상호명</string>
    <string name="label_seller_menu">메뉴</string>
    <string name="label_seller_hours">영업시간</string>
    <string name="label_seller_img">대표 이미지</string>
    <string name="action_modify">수정</string>
    <string name="menu_detail">상세정보</string>
    <string name="add_img">추가</string>
    <string name="label_seller_keyword">검색 키워드</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_base2">BaseActivity</string>
</resources>