<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyPageSellerModifyActivity">

    <LinearLayout
        android:id="@+id/ll_modify_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_seller_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_seller_name" />
        <EditText
            android:id="@+id/et_seller_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:hint="상호명"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_modify_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_modify_name"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_seller_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_seller_hours" />
        <Button
            android:id="@+id/btn_open_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="~부터"
            android:background="@color/sub_colorGray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="~" />
        <Button
            android:id="@+id/btn_close_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@color/sub_colorGray"
            android:text="~까지"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_modify_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_modify_hours"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_seller_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_seller_menu" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_new_menu_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:hint="메뉴이름" />
            <EditText
                android:id="@+id/et_new_menu_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:inputType="number"
                android:singleLine="true"
                android:hint="가격" />
            <Button
                android:id="@+id/btn_add_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"/>
        </LinearLayout>
        <ScrollView
            android:id="@+id/sv_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TableLayout
                android:id="@+id/tl_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TableLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_modify_imgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_modify_menus"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_seller_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_seller_img" />

        <LinearLayout
            android:id="@+id/ll_imgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_add_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/settings"
                android:text="@string/add_img" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_modify_imgs">

    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:layout_weight="1"
            android:background="@color/sub_colorGray"
            android:text="@string/action_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/action_modify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>